# tradeBot

./: main.py  pyproject.toml  setting.py
